Fix some nullability subtleties